# karafriends

./: .gitattributes  .gitignore  .pnp.cjs  .yarnrc.yml  README.md  electron.js  package-lock.json  package.json  packager.js  remocon.wdio.conf.ts  renderer.wdio.conf.ts  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  codeql.yml  dependabot-automerge.yml  release.yaml
decryptor/: decryptor.py  encryptor.py
native/karafriends/: Cargo.toml
native/karafriends-lib/: Cargo.toml
native/karafriends-lib/src/: WestLiveRoom_44100.f32le  convolution_reverb.rs  lib.rs  pitch_detector.rs  reverb_module.rs
scripts/: getExternalResources.mjs
src/common/: config.ts  disableParcelErrorOverlay.ts  externalResources.ts  externalResourcesPlan.test.ts  externalResourcesPlan.ts  joysoundDuration.test.ts  joysoundDuration.ts  joysoundParser.ts  schema.graphql  stringUtil.ts  videoDownloader.ts  vttParser.ts
src/common/hooks/: useQueue.ts
src/main/: damApi.ts  graphql.ts  index.ts  joysoundApi.ts  mdns.ts  winFileUrlFix.ts
src/main/middleware/: remoconReverseProxy.ts  remoconServiceWorkerAllowed.ts
src/preload/: index.ts
src/renderer/: App.css  App.tsx  BackgroundMusic.tsx  BackgroundMusicSetting.tsx  ErrorBoundary.tsx  HostnameSetting.tsx  JoysoundRenderer.tsx  Player.css  Player.tsx  bgmTracks.ts  index.css  index.tsx
src/renderer/audio/: audioworklet.d.ts
src/renderer/lyrics/: LyricsFormatter.ts  LyricsPreprocessor.ts  LyricsRendererSettings.ts  LyricsRendererUtil.ts
static/bgm/: joysound-magazine-song-selection.webm
(+3 files in other folders)
