[package]
name = "karafriends-lib"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"

[lib]
name = "karafriends_lib"
crate-type = ["lib"]

[dependencies]
asio-sys = { version = "0.2.2", optional = true }
cpal = { version = "0.16.0" }
neon = { version = "1.0.0", default-features = false, features = ["napi-8"] }
realfft = "3.4.0"
ringbuf = "0.4.8"
rubato = "0.16.2"

[dev-dependencies]
wavegen = "0.4.1"

[features]
asio = ["asio-sys", "cpal/asio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
